Aligned the logo correctly

--- a/base.css
+++ b/base.css
@@ -1,8 +1,12 @@
 @CHARSET "UTF-8";
 body { margin: 0px; padding: 0px; font-family: arial, helvetica, sans-serif; color: #222;}
 header, nav, footer { display: block; }
-header { padding: 20px 0px 30px; background-color: #222; background: -moz-radial-gradient(50% 50%, farthest-side, #111, #222);
-  background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#222), to(#111));}
+header { 
+    padding: 20px 0px 30px; 
+    background-color: #222; 
+    background: -moz-radial-gradient(50% 50%, farthest-side, #111, #222);
+    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#222), to(#111));
+}
 .wrapper { margin: 0 auto; width: 800px; }
 .floatleft {float:left;}
 .floatright {float:right;}
@@ -35,7 +39,12 @@ div#main { background-color: #f6f6f6; background-image: -moz-linear-gradient(100
 #identica {background: #7bb12e; }
 /* sub page alterations */
 #sub-page header { padding: 0px; }
-#sub-page header .wrapper { width: 640px; height: 60px; padding-left: 160px; background: url(sub-logo.png) no-repeat left 50%; }
+#sub-page header .wrapper { 
+    width: 640px; 
+    height: 60px; 
+    padding-left: 160px; 
+    background: url(sub-logo.png) no-repeat left top; 
+}
 #sub-page nav .wrapper ul { position: relative; top: 24px; }
 #sub-page nav .wrapper ul li { font-size: 14px; }
 #sub-page #left { width: 530px; }
